force-app/main/default/objects/Payment_Rejection__c/Payment_Rejection__c.object-meta.xml
<CustomObject>
    <label>Payment Rejection</label>
    <nameField>
        <displayFormat>spr-{00000}</displayFormat>
        <label>Payment Rejection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Rejections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>