force-app/main/default/objects/Payment_Rejection__c/fields/Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment__c</fullName>
    <label>Scheduled Payment</label>
    <referenceTo>Scheduled_Payment__c</referenceTo>
    <relationshipLabel>Payment Rejections</relationshipLabel>
    <relationshipName>Payment_Rejections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>