force-app/main/default/objects/Payment_Rejection__c/fields/Scheduled_Payment_Action__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Action__c</fullName>
    <label>Scheduled Payment Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set to Scheduled</fullName>
            </value>
            <value>
                <fullName>Set to Rejected</fullName>
                <default>true</default>
                <label>Set to Rejected</label>
            </value>
            <value>
                <fullName>Set to Won&#39;t Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>