force-app/main/default/objects/Payment_Rejection__c/fields/Use_Original_Sent_Date_for_Interest__c.field-meta.xml
<CustomField>
    <fullName>Use_Original_Sent_Date_for_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should the payment use the original sent date for interest calculations when it is re-processed?</description>
    <label>Use Original Sent Date for Interest</label>
    <type>Checkbox</type>
</CustomField>